fix practice now and flashcards uneven width on mobile

--- a/client/assets/custom.scss
+++ b/client/assets/custom.scss
@@ -1510,6 +1510,7 @@ body {
 
 .grow-children {
   & > * {
+    flex-basis: 0;
     flex-grow: 1;
   }
 }
